apps/platform/kafka/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-kafka
  labels:
    platform.jaccloud.nl/tenant: platform
