apps/platform/kafka/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  type: ClusterIP
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
      protocol: TCP
  selector:
    app.kubernetes.io/name: kafka
