apps/platform/kafka/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "TCP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: kafka.dev.jac.dot
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka
                port:
                  number: 9092
